--- a/resources/webview.html
+++ b/resources/webview.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>chakraThemeMaker</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  chakraThemeMaker
+  <head>
+    <meta charset="utf-8" />
+    <title>chakraThemeMaker</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div id="root"></div>
 
-  <div>
-    <button id="button">Get a random number</button>
-  </div>
-  <div id="answer"></div>
+    <div>
+      <button id="button">Get TextStyle-Object</button>
+    </div>
 
-  <!-- notice the "../resources_" here. It's because webview.js will be compiled in a different folder with the prefix. -->
-  <script src="../resources_webview.js"></script>
-</body>
+    <!-- notice the "../resources_" here. It's because webview.js will be compiled in a different folder with the prefix. -->
+    <script src="../resources_webview.js"></script>
+  </body>
 </html>
