:sparkles: Use Chakra UI and the new communication hooks in the webview

--- a/resources/webview.html
+++ b/resources/webview.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>chakraThemeMaker</title>
@@ -7,11 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-
-    <div>
-      <button id="button">Get TextStyle-Object</button>
-    </div>
-
     <!-- notice the "../resources_" here. It's because webview.js will be compiled in a different folder with the prefix. -->
     <script src="../resources_webview.js"></script>
   </body>
